trunk/Archive2/ac/776f5163af4089/output
main.cpp: In function ‘int main()’:
main.cpp:21:1: error: ‘f’ was not declared in this scope
 f
 ^
main.cpp:22:1: error: expected ‘;’ before ‘}’ token
 }
 ^
main.cpp:20:15: warning: unused variable ‘s’ [-Wunused-variable]
     for(auto& s: a3)
               ^
